--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16493,10 +16493,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 250, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 108, 111, 80, 11
   CONTROL "", 260, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 237, 111, 80, 11
   CONTROL "", 270, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 108, 123, 209, 11
-  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 108, 135, 34, 11
-  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 144, 135, 34, 11
-  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 180, 135, 20, 11
-  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 202, 135, 80, 11
+  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 108, 135, 20, 11
+  CONTROL "", 380, "Edit", WS_BORDER|WS_TABSTOP, 130, 135, 20, 11
+  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 152, 135, 34, 11
+  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 187, 135, 34, 11
+  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 223, 135, 20, 11
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 245, 135, 72, 11
   CONTROL "", 350, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 108, 147, 71, 11
   CONTROL "", 360, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 108, 160, 71, 11
   CONTROL "&Aceptar", 500, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 223, 182, 50, 14
@@ -16505,11 +16507,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "Nombre", -1, "Static", WS_GROUP, 50, 54, 29, 8
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 50, 66, 34, 8
   CONTROL "Población", -1, "Static", WS_GROUP, 50, 78, 34, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 197, 90, 33, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 50, 138, 27, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 191, 90, 33, 8
+  CONTROL "Cuenta IBAN", -1, "Static", WS_GROUP, 50, 138, 47, 8
   CONTROL "Cod. postal", -1, "Static", WS_GROUP, 50, 90, 38, 8
   CONTROL "Teléfono", -1, "Static", WS_GROUP, 50, 114, 32, 8
-  CONTROL "Fax", -1, "Static", WS_GROUP, 197, 114, 15, 8
+  CONTROL "Fax", -1, "Static", WS_GROUP, 191, 114, 15, 8
   CONTROL "Contacto", -1, "Static", WS_GROUP, 50, 126, 34, 8
   CONTROL "País", -1, "Static", WS_GROUP, 50, 102, 18, 8
   CONTROL "Saldo inicial", -1, "Static", WS_GROUP, 50, 150, 43, 8
