--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11468,26 +11468,28 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 250, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 68, 73, 80, 11
   CONTROL "", 260, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 197, 73, 80, 11
   CONTROL "", 270, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 68, 85, 209, 11
-  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 68, 97, 34, 11
-  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 104, 97, 34, 11
-  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 140, 97, 20, 11
-  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 162, 97, 80, 11
-  CONTROL "", 350, "Edit", NOT WS_VISIBLE|ES_RIGHT|WS_BORDER|WS_TABSTOP, 67, 127, 71, 11
-  CONTROL "Banco por defecto", 290, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 10, 111, 73, 12
+  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 68, 97, 20, 11
+  CONTROL "", 380, "Edit", WS_BORDER|WS_TABSTOP, 90, 97, 20, 11
+  CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 112, 97, 34, 11
+  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 147, 97, 34, 11
+  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 183, 97, 20, 11
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 205, 97, 72, 11
+  CONTROL "", 350, "Edit", NOT WS_VISIBLE|ES_RIGHT|WS_BORDER|WS_TABSTOP, 67, 125, 71, 11
+  CONTROL "Banco por defecto", 290, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 10, 111, 73, 11
   CONTROL "&Aceptar [F5]", 500, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 182, 147, 50, 14
   CONTROL "&Cancelar", 550, "Button", WS_TABSTOP, 233, 147, 50, 14
   CONTROL "Banco", -1, "Button", BS_GROUPBOX, 4, 4, 280, 138
   CONTROL "Nombre", -1, "Static", WS_GROUP, 10, 16, 29, 8
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 10, 28, 34, 8
   CONTROL "Población", -1, "Static", WS_GROUP, 10, 40, 34, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 157, 52, 33, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 150, 52, 33, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 10, 100, 27, 8
   CONTROL "Cod. postal", -1, "Static", WS_GROUP, 10, 52, 38, 8
   CONTROL "Teléfono", -1, "Static", WS_GROUP, 10, 76, 32, 8
-  CONTROL "Fax", -1, "Static", WS_GROUP, 157, 76, 15, 8
+  CONTROL "Fax", -1, "Static", WS_GROUP, 150, 76, 15, 8
   CONTROL "Contacto", -1, "Static", WS_GROUP, 10, 88, 34, 8
   CONTROL "País", -1, "Static", WS_GROUP, 10, 64, 18, 8
-  CONTROL "Saldo inicial", -1, "Static", NOT WS_VISIBLE|WS_GROUP, 10, 128, 43, 8
+  CONTROL "Saldo inicial", -1, "Static", NOT WS_VISIBLE|WS_GROUP, 10, 126, 43, 8
 }
 
 HELPENTRYDUPSTK DIALOG DISCARDABLE 141, -5, 492, 319
@@ -16420,7 +16422,7 @@ STYLE WS_CHILD|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Entidad bancaria de la empresa", -1, "Button", BS_GROUPBOX, 44, 29, 285, 41
-  CONTROL "Entidad bancaria del cliente", -1, "Button", BS_GROUPBOX, 44, 72, 285, 43
+  CONTROL "Entidad bancaria del cliente/proveedor", -1, "Button", BS_GROUPBOX, 44, 72, 285, 43
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 89, 42, 232, 11
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 89, 55, 34, 11
@@ -16430,12 +16432,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Banco", -1, "Static", WS_GROUP, 50, 43, 23, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 50, 58, 27, 8
   CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 89, 85, 232, 11
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 89, 98, 34, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 125, 98, 34, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 161, 98, 20, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 183, 98, 80, 11
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 89, 98, 20, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 111, 98, 20, 11
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 133, 98, 34, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 169, 98, 34, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 205, 98, 20, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 227, 98, 94, 11
   CONTROL "Banco", -1, "Static", WS_GROUP, 50, 86, 23, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 50, 101, 27, 8
+  CONTROL "IBAN", -1, "Static", WS_GROUP, 50, 101, 27, 8
 }
 
 RECIBOS_5 DIALOG DISCARDABLE 82, 27, 333, 272
@@ -18319,10 +18323,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 481, 42, 60, 11
   CONTROL "", 161, "Edit", WS_BORDER, 543, 42, 118, 11
   CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 481, 54, 180, 11
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 481, 66, 22, 11
-  CONTROL "", 302, "Edit", WS_BORDER|WS_TABSTOP, 504, 66, 22, 11
-  CONTROL "", 303, "Edit", WS_BORDER|WS_TABSTOP, 527, 66, 22, 11
-  CONTROL "", 304, "Edit", WS_BORDER|WS_TABSTOP, 551, 66, 110, 11
+  CONTROL "", 305, "Edit", WS_BORDER|WS_TABSTOP, 481, 66, 18, 11
+  CONTROL "", 306, "Edit", WS_BORDER|WS_TABSTOP, 499, 66, 18, 11
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 518, 66, 28, 11
+  CONTROL "", 302, "Edit", WS_BORDER|WS_TABSTOP, 547, 66, 28, 11
+  CONTROL "", 303, "Edit", WS_BORDER|WS_TABSTOP, 575, 66, 18, 11
+  CONTROL "", 304, "Edit", WS_BORDER|WS_TABSTOP, 593, 66, 68, 11
   CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 481, 78, 60, 11
   CONTROL "", 166, "Edit", WS_BORDER, 543, 78, 118, 11
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 481, 90, 60, 11
@@ -18412,7 +18418,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "% R.E. 3", 716, "Static", WS_GROUP, 285, 323, 33, 8
   CONTROL "NFC", -1, "Static", WS_GROUP, 44, 45, 35, 8
   CONTROL "Banco", -1, "Static", WS_GROUP, 449, 57, 31, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 449, 69, 31, 8
+  CONTROL "IBAN", -1, "Static", WS_GROUP, 449, 69, 31, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Facturas a proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
@@ -18436,10 +18442,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 131, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 102, 124, 105, 11
   CONTROL "", 142, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 253, 124, 257, 11
   CONTROL "", 210, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 102, 157, 408, 62
-  CONTROL "General", 270, "Button", BS_AUTORADIOBUTTON, 535, 42, 80, 10
-  CONTROL "Unión Europea", 271, "Button", BS_AUTORADIOBUTTON, 535, 59, 80, 10
-  CONTROL "Exento", 272, "Button", BS_AUTORADIOBUTTON, 535, 76, 80, 10
-  CONTROL "Exportación", 273, "Button", BS_AUTORADIOBUTTON, 535, 93, 80, 10
+  CONTROL "General", 270, "Button", BS_AUTORADIOBUTTON, 535, 41, 80, 10
+  CONTROL "Unión Europea", 271, "Button", BS_AUTORADIOBUTTON, 535, 54, 80, 10
+  CONTROL "Exento", 272, "Button", BS_AUTORADIOBUTTON, 535, 67, 80, 10
+  CONTROL "Exportación", 273, "Button", BS_AUTORADIOBUTTON, 535, 80, 80, 10
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 50, 244, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 50, 260, 50, 14
   CONTROL "&Impimir", 505, "Button", WS_TABSTOP, 50, 276, 50, 14
@@ -18460,7 +18466,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", -1, "Button", BS_GROUPBOX, 529, 230, 130, 141
   CONTROL "Delegación", -1, "Static", WS_GROUP, 50, 57, 39, 8
   CONTROL "Comentarios ", -1, "Button", BS_GROUPBOX, 44, 147, 475, 79
-  CONTROL "Régimen de imp.", -1, "Button", BS_GROUPBOX, 529, 30, 130, 196
+  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 529, 30, 130, 196
   CONTROL "Fecha", -1, "Static", WS_GROUP, 50, 127, 45, 8
   CONTROL "Documento", -1, "Static", WS_GROUP, 210, 127, 42, 8
   CONTROL "Subcuenta gto.", -1, "Static", WS_GROUP, 50, 101, 45, 8
