--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1710,10 +1710,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 340, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 131, 42, 11
   CONTROL "Utilizar entidad bancaria de la empresa", 126, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 148, 135, 10
   CONTROL "", 210, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 66, 161, 214, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 66, 175, 34, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 102, 175, 34, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 138, 175, 20, 11
-  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 160, 175, 80, 11
+  CONTROL "", 370, "Edit", WS_BORDER|WS_TABSTOP, 66, 174, 20, 11
+  CONTROL "", 380, "Edit", WS_BORDER|WS_TABSTOP, 88, 174, 20, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 109, 174, 32, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 143, 174, 32, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 177, 174, 20, 11
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 199, 174, 80, 11
   CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 66, 200, 70, 11
   CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 140, 200, 140, 11
   CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 66, 213, 70, 11
@@ -1745,8 +1747,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Entrega inicial %", -1, "Static", WS_GROUP, 150, 43, 57, 8
   CONTROL "Descuento %", -1, "Static", WS_GROUP, 150, 55, 49, 8
   CONTROL "Código pago", -1, "Static", WS_GROUP, 5, 244, 45, 8
-  CONTROL "Banco", -1, "Static", WS_GROUP, 6, 162, 23, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 6, 175, 27, 8
+  CONTROL "Banco", -1, "Static", WS_GROUP, 6, 164, 23, 8
+  CONTROL "Cuenta IBAN", -1, "Static", WS_GROUP, 6, 177, 47, 8
   CONTROL "Web", -1, "Button", BS_GROUPBOX, 2, 315, 282, 28
   CONTROL "Código web", -1, "Static", WS_GROUP, 6, 328, 40, 8
 }
@@ -16459,28 +16461,32 @@ RECIBOS_6 DIALOG DISCARDABLE 82, 27, 333, 272
 STYLE WS_CHILD|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 119, 285, 35
-  CONTROL "Entidad bancaria de la empresa", -1, "Button", BS_GROUPBOX, 44, 29, 285, 43
-  CONTROL "Entidad bancaria del cliente", -1, "Button", BS_GROUPBOX, 44, 74, 285, 43
-  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 89, 42, 232, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 89, 56, 34, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 125, 56, 34, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 161, 56, 20, 11
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 183, 56, 80, 11
-  CONTROL "Banco", -1, "Static", WS_GROUP, 50, 43, 23, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 50, 56, 27, 8
-  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 89, 87, 232, 11
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 89, 101, 34, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 125, 101, 34, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 161, 101, 20, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 183, 101, 80, 11
-  CONTROL "Banco", -1, "Static", WS_GROUP, 50, 88, 23, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 50, 101, 27, 8
-  CONTROL "Recibo remesado", 300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 126, 70, 10
-  CONTROL "", 310, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 89, 139, 40, 11
-  CONTROL "", 320, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 131, 139, 18, 11
-  CONTROL "Remesa", -1, "Static", WS_GROUP, 50, 142, 34, 8
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 89, 55, 20, 11
+  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 111, 55, 20, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 133, 55, 34, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 169, 55, 34, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 205, 55, 20, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 227, 55, 94, 11
+  CONTROL "Banco", 4003, "Static", WS_GROUP, 50, 43, 23, 8
+  CONTROL "Cuenta", 4004, "Static", WS_GROUP, 50, 58, 27, 8
+  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 89, 85, 232, 11
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 89, 98, 20, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 111, 98, 20, 11
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 133, 98, 34, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 169, 98, 34, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 205, 98, 20, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 227, 98, 94, 11
+  CONTROL "Recibo remesado", 300, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 124, 70, 10
+  CONTROL "Banco", 4005, "Static", WS_GROUP, 50, 86, 23, 8
+  CONTROL "", 310, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 89, 137, 40, 11
+  CONTROL "IBAN", 4006, "Static", WS_GROUP, 50, 101, 27, 8
+  CONTROL "", 320, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 131, 137, 18, 11
+  CONTROL "Entidad bancaria de la empresa", -1, "Button", BS_GROUPBOX, 44, 29, 285, 41
+  CONTROL "Entidad bancaria del cliente", -1, "Button", BS_GROUPBOX, 44, 72, 285, 43
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 117, 285, 35
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Remesa", -1, "Static", WS_GROUP, 50, 140, 34, 8
 }
 
 BANCOEMPRESA DIALOG DISCARDABLE 51, -26, 330, 205
@@ -17139,10 +17145,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 495, 42, 56, 11
   CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 552, 42, 110, 11
   CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 495, 54, 167, 11
-  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 495, 66, 27, 11
-  CONTROL "", 421, "Edit", WS_BORDER|WS_TABSTOP, 524, 66, 27, 11
-  CONTROL "", 422, "Edit", WS_BORDER|WS_TABSTOP, 552, 66, 23, 11
-  CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 576, 66, 86, 11
   CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 495, 78, 56, 11
   CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 552, 78, 110, 11
   CONTROL "", 252, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 495, 90, 56, 11
@@ -17246,6 +17248,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 58, 48, 8
   CONTROL "", 153, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 107, 114, 92, 12
   CONTROL "", 604, "TBtnBmp", 0x00000000, 44, 114, 12, 12
+  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 533, 66, 24, 11
+  CONTROL "", 421, "Edit", WS_BORDER|WS_TABSTOP, 558, 66, 24, 11
+  CONTROL "", 422, "Edit", WS_BORDER|WS_TABSTOP, 583, 66, 18, 11
+  CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 602, 66, 60, 11
+  CONTROL "", 424, "Edit", WS_BORDER|WS_TABSTOP, 495, 66, 18, 11
+  CONTROL "", 425, "Edit", WS_BORDER|WS_TABSTOP, 514, 66, 18, 11
 }
 
 FACCLI_2 DIALOG DISCARDABLE 26, -29, 670, 375
@@ -17570,10 +17578,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 474, 42, 60, 11
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 535, 42, 126, 11
   CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 474, 54, 187, 11
-  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 474, 66, 29, 11
-  CONTROL "", 421, "Edit", WS_BORDER|WS_TABSTOP, 505, 66, 29, 11
-  CONTROL "", 422, "Edit", WS_BORDER|WS_TABSTOP, 536, 66, 29, 11
-  CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 566, 66, 95, 11
+  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 513, 66, 28, 11
+  CONTROL "", 421, "Edit", WS_BORDER|WS_TABSTOP, 543, 66, 28, 11
+  CONTROL "", 422, "Edit", WS_BORDER|WS_TABSTOP, 573, 66, 18, 11
+  CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 593, 66, 68, 11
   CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 474, 78, 60, 11
   CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 535, 78, 126, 11
   CONTROL "", 182, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 474, 90, 60, 11
@@ -17662,6 +17670,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 57, 51, 8
   CONTROL "Banco", -1, "Static", WS_GROUP, 444, 57, 26, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 444, 69, 28, 8
+  CONTROL "", 424, "Edit", WS_BORDER|WS_TABSTOP, 474, 66, 18, 11
+  CONTROL "", 425, "Edit", WS_BORDER|WS_TABSTOP, 493, 66, 18, 11
 }
 
 PEDCLI_2 DIALOG DISCARDABLE 45, 10, 670, 375
@@ -17753,10 +17763,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 552, 30, 113, 11
   CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 485, 42, 65, 11
   CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 485, 54, 180, 11
-  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 485, 66, 32, 11
-  CONTROL "", 421, "Edit", WS_BORDER|WS_TABSTOP, 518, 66, 32, 11
-  CONTROL "", 422, "Edit", WS_BORDER|WS_TABSTOP, 552, 66, 26, 11
-  CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 579, 66, 86, 11
+  CONTROL "", 424, "Edit", WS_BORDER|WS_TABSTOP, 485, 66, 18, 11
+  CONTROL "", 425, "Edit", WS_BORDER|WS_TABSTOP, 504, 66, 18, 11
+  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 523, 66, 26, 11
+  CONTROL "", 421, "Edit", WS_BORDER|WS_TABSTOP, 551, 66, 26, 11
+  CONTROL "", 422, "Edit", WS_BORDER|WS_TABSTOP, 578, 66, 18, 11
+  CONTROL "", 423, "Edit", WS_BORDER|WS_TABSTOP, 597, 66, 68, 11
   CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 552, 42, 113, 11
   CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 485, 78, 65, 11
   CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 552, 78, 113, 11
