--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17146,8 +17146,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 187, "Edit", WS_BORDER, 397, 90, 65, 11
   CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 252, 102, 54, 11
   CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 307, 102, 155, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 252, 115, 54, 11
-  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 307, 115, 155, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 252, 114, 54, 11
+  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 307, 114, 155, 11
   CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 495, 30, 56, 11
   CONTROL "", 211, "Edit", WS_BORDER|WS_TABSTOP, 552, 30, 110, 11
   CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 495, 42, 56, 11
@@ -17159,9 +17159,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "Agente", 253, "Edit", ES_RIGHT|WS_BORDER, 552, 90, 110, 11
   CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 495, 102, 56, 11
   CONTROL "", 261, "Edit", WS_BORDER|WS_TABSTOP, 552, 102, 110, 11
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 495, 115, 56, 11
-  CONTROL "", 191, "TBitmap", 0x00800000, 552, 115, 16, 11
-  CONTROL "", 192, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 570, 115, 92, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 495, 114, 56, 11
+  CONTROL "", 191, "TBitMap", 0x00800000, 552, 114, 16, 11
+  CONTROL "", 192, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 570, 114, 92, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 128, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 98, 128, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 153, 128, 50, 14
@@ -17189,14 +17189,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Recargo equivalencia", 406, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 486, 332, 83, 10
   CONTROL "", 440, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 486, 342, 74, 40
   CONTROL "", 490, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 561, 342, 36, 13
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 43, 25, 11
-  CONTROL "", 110, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 133, 43, 46, 11
-  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 180, 43, 19, 11
-  CONTROL "", 217, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_NOINTEGRALHEIGHT|WS_TABSTOP, 107, 29, 92, 104
-  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 55, 92, 11
-  CONTROL "", 570, "Edit", WS_BORDER|WS_TABSTOP, 107, 67, 92, 11
-  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 79, 92, 11
-  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 91, 92, 11
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 42, 25, 11
+  CONTROL "", 110, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 133, 42, 46, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 180, 42, 19, 11
+  CONTROL "", 217, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_NOINTEGRALHEIGHT|WS_TABSTOP, 107, 29, 92, 104
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 54, 92, 11
+  CONTROL "Régimen especial del criterio de caja", 195, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 67, 129, 9
+  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 78, 92, 11
+  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 107, 90, 92, 11
   CONTROL "", 115, "Edit", ES_RIGHT|WS_BORDER, 107, 102, 92, 11
   CONTROL "Imp. incluidos", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 103, 56, 10
   CONTROL "", 601, "TBtnBmp", 0x00000000, 56, 114, 12, 12
@@ -17218,7 +17218,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Neto", 708, "Static", WS_GROUP, 486, 287, 53, 8
   CONTROL "Impuestos", 709, "Static", WS_GROUP, 486, 323, 53, 8
   CONTROL "Imp. especiales", 710, "Static", WS_GROUP, 486, 305, 53, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 465, 117, 29, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 465, 116, 29, 8
   CONTROL "Cliente", -1, "Static", WS_GROUP, 202, 33, 48, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 202, 44, 48, 8
   CONTROL "N.I.F.", -1, "Static", WS_GROUP, 202, 57, 48, 8
@@ -17229,8 +17229,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Precio", -1, "Static", WS_GROUP, 359, 33, 25, 8
   CONTROL "Teléfono", -1, "Static", WS_GROUP, 359, 93, 33, 8
   CONTROL "Tarifa pers.", -1, "Static", WS_GROUP, 465, 33, 29, 8
-  CONTROL "Direcc.", -1, "Static", WS_GROUP, 202, 105, 48, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 202, 118, 48, 8
+  CONTROL "Dirección", -1, "Static", WS_GROUP, 202, 105, 48, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 202, 117, 48, 8
   CONTROL "Pago", -1, "Static", WS_GROUP, 465, 45, 29, 8
   CONTROL "Agente", -1, "Static", WS_GROUP, 465, 81, 29, 8
   CONTROL "%Com.", -1, "Static", WS_GROUP, 465, 93, 29, 8
@@ -17241,19 +17241,18 @@ FONT 8, "MS Sans Serif"
   CONTROL "Transporte", 712, "Static", WS_GROUP, 486, 296, 53, 8
   CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 89, 357, 100, 11
   CONTROL "Fecha salida", 112, "Static", WS_GROUP, 44, 81, 48, 8
-  CONTROL "Fecha entrada", 114, "Static", WS_GROUP, 44, 93, 51, 8
+  CONTROL "Fecha entrada", 114, "Static", WS_GROUP, 44, 92, 51, 8
   CONTROL "", 551, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 350, 348, 130, 11
   CONTROL "", 550, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 288, 348, 60, 11
   CONTROL "Entrega inicial %", 552, "Static", WS_GROUP, 202, 351, 84, 8
   CONTROL "", 561, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 350, 360, 130, 11
   CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 288, 360, 60, 11
   CONTROL "Descuento por entrega %", 562, "Static", WS_GROUP, 202, 363, 84, 8
-  CONTROL "NFC", -1, "Static", WS_GROUP, 44, 69, 48, 8
   CONTROL "Banco", -1, "Static", WS_GROUP, 465, 57, 29, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 465, 69, 29, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Factura cliente", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 58, 48, 8
+  CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 57, 48, 8
   CONTROL "", 153, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 107, 114, 92, 12
   CONTROL "", 604, "TBtnBmp", 0x00000000, 44, 114, 12, 12
   CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 533, 66, 24, 11
@@ -18356,11 +18355,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 304, "Edit", WS_BORDER|WS_TABSTOP, 593, 66, 68, 11
   CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 481, 78, 60, 11
   CONTROL "", 166, "Edit", WS_BORDER, 543, 78, 118, 11
-  CONTROL "", 170, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 481, 90, 39, 11
-  CONTROL "", 171, "TBitMap", NOT WS_VISIBLE|0x00800000, 522, 90, 19, 11
-  CONTROL "", 180, "Edit", NOT WS_VISIBLE|ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 544, 90, 117, 11
-  CONTROL "Factura acogida al régimen especial del criterio de caja", 195, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 449, 103, 186, 10
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 95, 90, 85, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 481, 90, 39, 11
+  CONTROL "", 171, "TBitMap", 0x00800000, 522, 90, 19, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 544, 90, 117, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 95, 102, 85, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 115, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 115, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 154, 115, 50, 14
@@ -18386,13 +18384,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 102, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 161, 30, 19, 11
   CONTROL "", 570, "Edit", WS_BORDER|WS_TABSTOP, 95, 42, 85, 11
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 95, 54, 85, 11
-  CONTROL "G", 512, "Button", WS_TABSTOP, 83, 66, 11, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 95, 66, 85, 11
-  CONTROL "Factura de gastos", 550, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 80, 71, 10
+  CONTROL "Régimen especial del criterio de caja", 195, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 67, 129, 10
+  CONTROL "G", 512, "Button", WS_TABSTOP, 83, 78, 11, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 95, 78, 85, 11
+  CONTROL "Factura de gastos", 550, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 92, 71, 10
   CONTROL "Número", -1, "Static", WS_GROUP, 44, 33, 35, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 57, 35, 8
-  CONTROL "Albarán", -1, "Static", WS_GROUP, 44, 69, 35, 8
-  CONTROL "Su factura", -1, "Static", WS_GROUP, 44, 93, 38, 8
+  CONTROL "Albarán", -1, "Static", WS_GROUP, 44, 81, 35, 8
+  CONTROL "Su factura", -1, "Static", WS_GROUP, 44, 105, 38, 8
   CONTROL "Proveedor", -1, "Static", WS_GROUP, 183, 33, 38, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 183, 45, 30, 8
   CONTROL "Domicilio", -1, "Static", WS_GROUP, 183, 69, 33, 8
@@ -18403,7 +18402,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Almacén", -1, "Static", WS_GROUP, 449, 33, 31, 8
   CONTROL "Pago", -1, "Static", WS_GROUP, 449, 45, 31, 8
   CONTROL "Caja", -1, "Static", WS_GROUP, 449, 81, 31, 8
-  CONTROL "Divisa", -1, "Static", NOT WS_VISIBLE|WS_GROUP, 449, 93, 31, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 449, 93, 31, 8
   CONTROL "%", 701, "Static", WS_GROUP, 179, 308, 7, 8
   CONTROL "%", 702, "Static", WS_GROUP, 179, 320, 7, 8
   CONTROL "%", 703, "Static", WS_GROUP, 179, 332, 6, 8
