--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17170,6 +17170,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 318, 128, 50, 14
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 373, 128, 50, 14
   CONTROL "Ocultar Esc&ll.", 526, "Button", WS_TABSTOP, 428, 128, 50, 14
+  CONTROL "Atípicas", 527, "Button", WS_TABSTOP, 482, 128, 50, 14
   CONTROL "", IDOK, "TXBrowse", WS_TABSTOP|0x00300000, 44, 143, 619, 127
   CONTROL "", 299, "Edit", WS_BORDER|WS_TABSTOP, 50, 287, 90, 11
   CONTROL "", 300, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 141, 287, 48, 11
