IMPORTACION ATIPICAS PEDIDOS

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17607,6 +17607,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 318, 130, 50, 14
   CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 373, 130, 50, 14
   CONTROL "Mostrar Esc&ll.", 526, "Button", WS_TABSTOP, 428, 130, 50, 14
+  CONTROL "Importat tarifa", 527, "Button", WS_TABSTOP, 483, 130, 50, 14
   CONTROL "", 210, "TXBrowse", WS_TABSTOP|0x00300000, 44, 146, 618, 138
   CONTROL "", 219, "Edit", WS_BORDER|WS_TABSTOP, 50, 298, 76, 11
   CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 128, 298, 38, 11
