--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19344,22 +19344,24 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 96, 50, 14
 }
 
-PROYECTO DIALOG DISCARDABLE 39, 38, 256, 236
+PROYECTO DIALOG DISCARDABLE 39, 38, 256, 109
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Proyectos"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 4, 40, 11
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 50, 16, 200, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 145, 217, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 200, 217, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 145, 88, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 200, 88, 50, 14
   CONTROL "Nombre", -1, "Static", WS_GROUP, 4, 19, 42, 8
   CONTROL "Código", -1, "Static", WS_GROUP, 4, 7, 37, 8
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 49, 29, 200, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 50, 29, 200, 11
   CONTROL "Nº serie", -1, "Static", WS_GROUP, 3, 32, 42, 8
-  CONTROL "", 4001, "Edit", WS_BORDER|WS_TABSTOP, 50, 56, 200, 11
-  CONTROL "Nº serie", 4002, "Static", WS_GROUP, 3, 59, 42, 8
-  CONTROL "", 4003, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 50, 42, 111, 141
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 50, 56, 100, 11
+  CONTROL "Compra", -1, "Static", WS_GROUP, 3, 59, 42, 8
+  CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 50, 42, 100, 141
   CONTROL "Situación", -1, "Static", WS_GROUP, 3, 44, 42, 8
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 50, 69, 100, 11
+  CONTROL "Costo dia", -1, "Static", WS_GROUP, 3, 72, 42, 8
 }
 
