--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -82,7 +82,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 352, 226, 50, 14
 }
 
-LALBPRV_1 DIALOG DISCARDABLE 135, 103, 397, 206
+LALBPRV_1 DIALOG DISCARDABLE 135, 103, 397, 221
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -121,11 +121,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 320, "Static", WS_GROUP, 131, 174, 48, 8
   CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 181, 171, 44, 11
   CONTROL "", 291, "Edit", WS_BORDER, 227, 171, 169, 11
-  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 190, 65, 11
-  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 331, 189, 65, 11
+  CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 207, 65, 11
+  CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 331, 206, 65, 11
   CONTROL "Descuento", -1, "Static", WS_GROUP, 131, 99, 40, 8
   CONTROL "Cajas", 141, "Static", WS_GROUP, 3, 111, 59, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 193, 34, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 3, 210, 34, 8
   CONTROL "Unidades", 151, "Static", WS_GROUP, 3, 123, 57, 8
   CONTROL "Precio compra", -1, "Static", WS_GROUP, 3, 174, 57, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 3, 5, 46, 8
@@ -133,17 +133,19 @@ FONT 8, "MS Sans Serif"
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 55, 43, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 42, 43, 8
   CONTROL "Alm./Stock", -1, "Static", WS_GROUP, 131, 136, 41, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 186, 397, 1
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 202, 397, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 18, 27, 8
   CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 131, 111, 34, 8
   CONTROL "Rappels", -1, "Static", WS_GROUP, 252, 111, 31, 8
-  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 252, 192, 49, 8
+  CONTROL "Ref. proveedor", -1, "Static", WS_GROUP, 252, 209, 49, 8
   CONTROL "Ir a celda", 411, "Static", WS_GROUP, 252, 99, 42, 8
   CONTROL "Unidades", 421, "Static", WS_GROUP, 3, 136, 57, 8
   CONTROL "Unidades", 431, "Static", WS_GROUP, 3, 149, 57, 8
   CONTROL "Unidades", 441, "Static", WS_GROUP, 3, 162, 57, 8
   CONTROL "Caducidad", 114, "Static", WS_GROUP, 3, 29, 41, 8
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 131, 123, 47, 8
+  CONTROL "Punto verde", 172, "Static", WS_GROUP, 3, 187, 47, 8
+  CONTROL "", 171, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 184, 65, 11
 }
 
 LALBPRV_2 DIALOG DISCARDABLE 26, 35, 360, 261
