--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5022,19 +5022,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 163, 41, 50, 14
 }
 
-GRPCLI DIALOG DISCARDABLE 39, 38, 256, 236
+GRPCLI DIALOG DISCARDABLE 39, 38, 452, 289
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Grupos de clientes"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 4, 40, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 50, 16, 200, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 145, 217, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 200, 217, 50, 14
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 4, 19, 42, 8
-  CONTROL "Código", -1, "Static", WS_GROUP, 4, 7, 37, 8
-  CONTROL "Grupo padre", -1, "Static", WS_GROUP, 4, 34, 42, 8
-  CONTROL "", 130, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 50, 32, 200, 180
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 342, 272, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 397, 272, 50, 14
+  CONTROL "", 500, "SysTabControl32", WS_TABSTOP, 4, 4, 443, 265
 }
 
 GETSERIALNO DIALOG DISCARDABLE 130, 69, 403, 247
@@ -19367,5 +19362,27 @@ FONT 8, "MS Sans Serif"
   CONTROL "Situación", -1, "Static", WS_GROUP, 4, 56, 42, 8
   CONTROL "Costo dia", -1, "Static", WS_GROUP, 4, 82, 42, 8
   CONTROL "Fecha compra", -1, "Static", WS_GROUP, 4, 43, 51, 8
+}
+
+GRPCLI_01 DIALOG DISCARDABLE 39, 38, 256, 219
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 4, 40, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 50, 16, 200, 11
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 4, 19, 42, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 4, 7, 37, 8
+  CONTROL "Grupo padre", -1, "Static", WS_GROUP, 4, 34, 42, 8
+  CONTROL "", 130, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 50, 32, 200, 180
+}
+
+GRPCLI_02 DIALOG DISCARDABLE 39, 38, 449, 199
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Aña&dir [F2]", 110, "Button", WS_TABSTOP, 4, 4, 50, 14
+  CONTROL "&Modificar [F3]", 120, "Button", WS_TABSTOP, 59, 4, 50, 14
+  CONTROL "&Eliminar [F4]", 130, "Button", WS_TABSTOP, 114, 4, 50, 14
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 4, 20, 440, 176
 }
 
