--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1908,12 +1908,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 111, "Button", NOT WS_VISIBLE|WS_TABSTOP, 644, 319, 42, 36
   CONTROL "", 110, "Button", NOT WS_VISIBLE|WS_TABSTOP, 559, 319, 84, 36
   CONTROL "", 109, "Button", NOT WS_VISIBLE|WS_TABSTOP, 601, 281, 42, 36
-  CONTROL "", 112, "Button", NOT WS_VISIBLE|WS_TABSTOP, 517, 319, 42, 36
+  CONTROL "", 112, "Button", NOT WS_VISIBLE|WS_TABSTOP, 516, 319, 42, 36
   CONTROL "", 108, "Button", NOT WS_VISIBLE|WS_TABSTOP, 559, 281, 42, 36
   CONTROL "", 107, "Button", NOT WS_VISIBLE|WS_TABSTOP, 516, 281, 42, 36
   CONTROL "", 106, "Button", NOT WS_VISIBLE|WS_TABSTOP, 601, 244, 42, 36
   CONTROL "", 105, "Button", NOT WS_VISIBLE|WS_TABSTOP, 559, 244, 42, 36
-  CONTROL "", 104, "Button", NOT WS_VISIBLE|WS_TABSTOP, 517, 244, 42, 36
+  CONTROL "", 104, "Button", NOT WS_VISIBLE|WS_TABSTOP, 516, 244, 42, 36
   CONTROL "", 103, "Button", NOT WS_VISIBLE|WS_TABSTOP, 601, 208, 42, 36
   CONTROL "", 102, "Button", NOT WS_VISIBLE|WS_TABSTOP, 559, 208, 42, 36
   CONTROL "", 600, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 516, 289, 170, 28
@@ -2373,7 +2373,7 @@ FONT 14, "Segoe UI"
   CONTROL "", 120, "Button", WS_TABSTOP, 132, 1, 24, 16
   CONTROL "", 150, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 57, 56, 99, 12
   CONTROL "Total Venta", 100, "Static", WS_GROUP, 1, 2, 105, 15
-  CONTROL "", 130, "TXBrowse", 0x00200000, 1, 18, 155, 37
+  CONTROL "", 130, "TXBrowse", WS_TABSTOP|0x00800000, 1, 18, 155, 37
   CONTROL "", 140, "TXBrowse", WS_TABSTOP|0x00800000, 1, 56, 55, 77
   CONTROL "20", 180, "Button", WS_TABSTOP, 82, 69, 24, 16
   CONTROL "50", 170, "Button", WS_TABSTOP, 57, 69, 24, 16
@@ -2391,5 +2391,34 @@ FONT 14, "Segoe UI"
   CONTROL "", 290, "Button", WS_TABSTOP, 132, 117, 24, 16
   CONTROL "", 110, "Button", WS_TABSTOP, 107, 1, 24, 16
   CONTROL "", 300, "Button", WS_TABSTOP, 132, 101, 24, 16
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+NEWCOBROBIG DIALOG DISCARDABLE -9, -141, 157, 169
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+FONT 18, "Segoe UI"
+{
+  CONTROL "", 120, "Button", WS_TABSTOP, 132, 1, 24, 16
+  CONTROL "", 150, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 57, 92, 99, 12
+  CONTROL "Total Venta", 100, "Static", WS_GROUP, 39, 2, 67, 15
+  CONTROL "", 130, "TXBrowse", WS_TABSTOP|0x00800000, 57, 18, 100, 37
+  CONTROL "", 140, "TXBrowse", WS_TABSTOP|0x00800000, 57, 56, 100, 35
+  CONTROL "20", 180, "Button", WS_TABSTOP, 82, 104, 24, 16
+  CONTROL "50", 170, "Button", WS_TABSTOP, 57, 104, 24, 16
+  CONTROL "10", 190, "Button", WS_TABSTOP, 107, 104, 24, 16
+  CONTROL "C", 160, "Button", WS_TABSTOP, 132, 104, 24, 16
+  CONTROL "2", 210, "Button", WS_TABSTOP, 82, 120, 24, 16
+  CONTROL "5", 200, "Button", WS_TABSTOP, 57, 120, 24, 16
+  CONTROL "1", 220, "Button", WS_TABSTOP, 107, 120, 24, 16
+  CONTROL "0,20", 240, "Button", WS_TABSTOP, 82, 136, 24, 16
+  CONTROL "0,50", 230, "Button", WS_TABSTOP, 57, 136, 24, 16
+  CONTROL "0,10", 250, "Button", WS_TABSTOP, 107, 136, 24, 16
+  CONTROL "0,02", 270, "Button", WS_TABSTOP, 82, 152, 24, 16
+  CONTROL "0,05", 260, "Button", WS_TABSTOP, 57, 152, 24, 16
+  CONTROL "0,01", 280, "Button", WS_TABSTOP, 107, 152, 24, 16
+  CONTROL "", 290, "Button", WS_TABSTOP, 132, 152, 24, 16
+  CONTROL "", 110, "Button", WS_TABSTOP, 107, 1, 24, 16
+  CONTROL "", 300, "Button", WS_TABSTOP, 132, 136, 24, 16
 }
 
