--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -13484,22 +13484,22 @@ CLIATP_0 DIALOG DISCARDABLE 35, -50, 296, 250
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 52, 25, 75, 11
   CONTROL "", 105, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 52, 27, 75, 11
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 52, 27, 75, 11
   CONTROL "", 106, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 128, 27, 160, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 128, 27, 160, 11
-  CONTROL "", 250, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 52, 39, 75, 11
-  CONTROL "", 251, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 128, 39, 160, 11
-  CONTROL "", 260, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 52, 51, 75, 11
-  CONTROL "", 261, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 128, 51, 160, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 128, 25, 160, 11
+  CONTROL "", 250, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 52, 37, 75, 11
+  CONTROL "", 251, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 128, 37, 160, 11
+  CONTROL "", 260, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 52, 49, 75, 11
+  CONTROL "", 261, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 128, 49, 160, 11
   CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 162, 78, 50, 11
   CONTROL "", 135, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 138, 90, 74, 11
   CONTROL "", 601, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 162, 102, 50, 11
-  CONTROL "Comisión agente", 151, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 116, 65, 8
+  CONTROL "Comisión agente", 151, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 116, 65, 8
   CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 162, 114, 50, 11
-  CONTROL "Particular", 122, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 142, 43, 10
+  CONTROL "Particular", 122, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 142, 43, 10
   CONTROL "", 123, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 141, 75, 11
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 137, 140, 75, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 141, 75, 11
   CONTROL "", 121, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 169, 75, 11
   CONTROL "", 124, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 181, 75, 11
   CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 193, 75, 11
@@ -13518,34 +13518,35 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 205, 50, 11
   CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 217, 50, 11
   CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 229, 50, 11
-  CONTROL "", 90, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 52, 11, 75, 40
-  CONTROL "Coste", 700, "Button", BS_GROUPBOX, 3, 132, 290, 24
-  CONTROL "Descuentos y comisiones", -1, "Button", BS_GROUPBOX, 3, 68, 290, 62
-  CONTROL "Naturaleza", -1, "Button", BS_GROUPBOX, 3, 0, 290, 66
-  CONTROL "Precio 1", 703, "Static", WS_GROUP, 9, 173, 30, 8
-  CONTROL "Descuento artículo", -1, "Static", WS_GROUP, 9, 81, 66, 8
+  CONTROL "", 90, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 52, 11, 75, 40
+  CONTROL "Coste", 700, "Button", BS_GROUPBOX, 2, 132, 290, 24
+  CONTROL "Descuentos y comisiones", -1, "Button", BS_GROUPBOX, 2, 68, 290, 62
+  CONTROL "Naturaleza", -1, "Button", BS_GROUPBOX, 2, 0, 290, 66
+  CONTROL "Precio 1", 703, "Static", WS_GROUP, 8, 173, 30, 8
+  CONTROL "Descuento artículo", -1, "Static", WS_GROUP, 8, 81, 66, 8
   CONTROL "%", -1, "Static", WS_GROUP, 214, 81, 7, 8
   CONTROL "%", -1, "Static", WS_GROUP, 214, 117, 7, 8
-  CONTROL "Descuento promoción", -1, "Static", WS_GROUP, 9, 105, 75, 8
+  CONTROL "Descuento promoción", -1, "Static", WS_GROUP, 8, 105, 75, 8
   CONTROL "%", -1, "Static", WS_GROUP, 214, 105, 7, 8
-  CONTROL "Descuento lineal", -1, "Static", WS_GROUP, 9, 93, 58, 8
-  CONTROL "Propiedad 1", 888, "Static", WS_GROUP, 9, 42, 42, 8
-  CONTROL "Propiedad 2", 999, "Static", WS_GROUP, 9, 54, 42, 8
-  CONTROL "Precio 2", 704, "Static", WS_GROUP, 9, 185, 30, 8
-  CONTROL "Precio 3", 705, "Static", WS_GROUP, 9, 197, 30, 8
-  CONTROL "Precio 4", 706, "Static", WS_GROUP, 9, 209, 30, 8
-  CONTROL "Precio 5", 707, "Static", WS_GROUP, 9, 221, 30, 8
-  CONTROL "Precio 6", 708, "Static", WS_GROUP, 9, 233, 30, 8
-  CONTROL "Importes netos", 701, "Button", BS_GROUPBOX, 3, 158, 128, 86
-  CONTROL "Impuestos incluidos", 702, "Button", BS_GROUPBOX, 130, 158, 86, 86
-  CONTROL "Código", -1, "Static", WS_GROUP, 9, 30, 27, 8
-  CONTROL "Descuentos %", 715, "Button", BS_GROUPBOX, 215, 158, 81, 86
+  CONTROL "Descuento lineal", -1, "Static", WS_GROUP, 8, 93, 58, 8
+  CONTROL "Propiedad 1", 888, "Static", WS_GROUP, 8, 40, 42, 8
+  CONTROL "Propiedad 2", 999, "Static", WS_GROUP, 8, 52, 42, 8
+  CONTROL "Precio 2", 704, "Static", WS_GROUP, 8, 185, 30, 8
+  CONTROL "Precio 3", 705, "Static", WS_GROUP, 8, 197, 30, 8
+  CONTROL "Precio 4", 706, "Static", WS_GROUP, 8, 209, 30, 8
+  CONTROL "Precio 5", 707, "Static", WS_GROUP, 8, 221, 30, 8
+  CONTROL "Precio 6", 708, "Static", WS_GROUP, 8, 233, 30, 8
+  CONTROL "Importes netos", 701, "Button", BS_GROUPBOX, 2, 158, 128, 86
+  CONTROL "Impuestos incluidos", 702, "Button", BS_GROUPBOX, 129, 158, 86, 86
+  CONTROL "Código", -1, "Static", WS_GROUP, 8, 28, 27, 8
+  CONTROL "Descuentos %", 715, "Button", BS_GROUPBOX, 214, 158, 81, 86
   CONTROL "Dto. 1", 709, "Static", WS_GROUP, 218, 172, 20, 8
   CONTROL "Dto. 2", 710, "Static", WS_GROUP, 218, 184, 20, 8
   CONTROL "Dto. 3", 711, "Static", WS_GROUP, 218, 196, 20, 8
   CONTROL "Dto. 4", 712, "Static", WS_GROUP, 218, 208, 20, 8
   CONTROL "Dto. 5", 713, "Static", WS_GROUP, 218, 220, 20, 8
   CONTROL "Dto. 6", 714, "Static", WS_GROUP, 218, 232, 20, 8
+  CONTROL "Tipo", -1, "Static", WS_GROUP, 8, 14, 27, 8
 }
 
 CLIATP_1 DIALOG DISCARDABLE 35, -50, 298, 186
