--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11351,6 +11351,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 127, 192, 52, 15
   CONTROL "Conexion en tiempo real con la web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 208, 129, 10
   CONTROL "Formato clientes: apellidos, nombre", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 220, 125, 10
+  CONTROL "Ocultar botón de exportación", 430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 208, 129, 10
   CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 381, 177, 43, 11
   CONTROL "TBtnBmp", 150, "TBtnBmp", 0x00000000, 412, 191, 12, 13
   CONTROL "", 250, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 245, 207, 11
