--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5022,14 +5022,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 163, 41, 50, 14
 }
 
-GRPCLI DIALOG DISCARDABLE 39, 38, 452, 289
+GRPCLI DIALOG DISCARDABLE 39, 38, 452, 249
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Grupos de clientes"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 342, 272, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 397, 272, 50, 14
-  CONTROL "", 500, "SysTabControl32", WS_TABSTOP, 4, 4, 443, 265
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 342, 231, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 397, 231, 50, 14
+  CONTROL "", 500, "SysTabControl32", WS_TABSTOP, 4, 4, 443, 223
 }
 
 GETSERIALNO DIALOG DISCARDABLE 130, 69, 403, 247
@@ -13486,7 +13486,7 @@ STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 52, 25, 75, 11
-  CONTROL "", 105, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 52, 27, 75, 11
+  CONTROL "", 105, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 52, 25, 75, 11
   CONTROL "", 106, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 128, 27, 160, 11
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 128, 25, 160, 11
   CONTROL "", 250, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 52, 37, 75, 11
@@ -13519,7 +13519,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 430, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 205, 46, 11
   CONTROL "", 440, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 217, 46, 11
   CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 242, 229, 46, 11
-  CONTROL "", 90, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 52, 11, 75, 40
+  CONTROL "", 90, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 52, 11, 75, 40
   CONTROL "Coste", 700, "Button", BS_GROUPBOX, 2, 132, 290, 24
   CONTROL "Descuentos y comisiones", -1, "Button", BS_GROUPBOX, 2, 68, 290, 62
   CONTROL "Naturaleza", -1, "Button", BS_GROUPBOX, 2, 0, 290, 66
@@ -19369,25 +19369,25 @@ FONT 8, "MS Sans Serif"
   CONTROL "Fecha compra", -1, "Static", WS_GROUP, 4, 43, 51, 8
 }
 
-GRPCLI_01 DIALOG DISCARDABLE 39, 38, 256, 219
+GRPCLI_01 DIALOG DISCARDABLE 39, 38, 438, 210
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 50, 4, 40, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 50, 16, 200, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 50, 16, 384, 11
   CONTROL "Nombre", -1, "Static", WS_GROUP, 4, 19, 42, 8
   CONTROL "Código", -1, "Static", WS_GROUP, 4, 7, 37, 8
-  CONTROL "Grupo padre", -1, "Static", WS_GROUP, 4, 34, 42, 8
-  CONTROL "", 130, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 50, 32, 200, 180
+  CONTROL "Grupo padre", -1, "Static", WS_GROUP, 4, 31, 42, 8
+  CONTROL "", 130, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 50, 29, 384, 177
 }
 
-GRPCLI_02 DIALOG DISCARDABLE 39, 38, 449, 199
+GRPCLI_02 DIALOG DISCARDABLE 39, 38, 438, 210
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Aña&dir [F2]", 110, "Button", WS_TABSTOP, 4, 4, 50, 14
   CONTROL "&Modificar [F3]", 120, "Button", WS_TABSTOP, 59, 4, 50, 14
   CONTROL "&Eliminar [F4]", 130, "Button", WS_TABSTOP, 114, 4, 50, 14
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 4, 20, 440, 176
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 4, 20, 430, 185
 }
 
